Fix spacing btwn projects

--- a/assets/stylesheets/_main.scss
+++ b/assets/stylesheets/_main.scss
@@ -1770,7 +1770,7 @@ section.profile-right.profile-page.project-details-page .row {
 		height: 75px;
 		margin-top: 15px;
 		width: 120px;
-		&:first-child {
+		&.first-img {
 			margin-top: 41px;
 		}
 	}
